# cookiecutter

./: .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE  README.md  README.rst  cookiecutter.json  mypy.ini  requirements.in  requirements.txt  tox.ini
.github/workflows/: test.yml
tests/: test_bake.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg  test-requirements.txt  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml  publish.yml  test.yml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.md
{{cookiecutter.project_name}}/sphinxcontrib/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/sphinxcontrib/{{cookiecutter.package_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_simple.py
{{cookiecutter.project_name}}/tests/cases/test-myst/: conf.py  index.md
{{cookiecutter.project_name}}/tests/cases/test-root/: index.rst
{{cookiecutter.project_name}}/{{ cookiecutter.documentation }}/.static/: readme.txt
{{cookiecutter.project_name}}/{{ cookiecutter.documentation }}/.templates/: readme.txt
{{cookiecutter.project_name}}/{{ cookiecutter.documentation_source }}/: conf.py  {{ cookiecutter.index }}.rst
