[build-system]
requires = [
    "flit_core >=3.4,<4",
    "wheel",
]
build-backend = "flit_core.buildapi"

[metadata]
name = {{ cookiecutter.project_name }}
readme = README.md
authors = [
    {name = {{ cookiecutter.author_name }}, email = {{ cookiecutter.author_email }} }
]
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
dynamic = ["version", "description"]

[project.urls]
Homepage = http://www.sphinx-doc.org/

[tool.mypy]
python_version = 3.9
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[tool.flake8]
show-source = True
builtins = unicode
