[build-system]
requires = [
    "flit_core >=3.4,<4",
    "wheel",
]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]

[tool.flit.module]
name = "{{ cookiecutter.package_name }}"

[project.urls]
Homepage = "http://www.sphinx-doc.org/"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx~=4.3.0",
]

[tool.isort]
profile = "black"
