[metadata]
name = {{ cookiecutter.project_name }}
summary = {{ cookiecutter.short_description }}
description-file =
    README.rst
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
home-page = http://www.sphinx-doc.org/
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
