[metadata]
name = {{ cookiecutter.project_name }}
summary = {{ cookiecutter.short_description }}
description-file =
    README.rst
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
home-page = http://www.sphinx-doc.org/
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[mypy]
python_version = 3.8
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
builtins = unicode
